Update RCB Recruitment Analyisis.ipynb

--- a/RCB Recruitment Analyisis.ipynb
+++ b/RCB Recruitment Analyisis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Stade Rennais Technical Interview\n",
-    "Data Scientist"
+    "Data Scientist position in the First Team Performance and Recruitment Team"
    ]
   },
   {
@@ -323,7 +323,7 @@
     "\n",
     "It is also important to note that all the metrics I use and how I weighted them are my interpretation of what I think is right. This might not be what you think is important and it might not be what the head of recruitment thinks is important. As I was not provided with a \"desired profile\" I will base it on my interpretation of the game and Warmed Omari playing style. (I got a notion from watching 3-4 games and looking at his data from the last year on FBRef)\n",
     "\n",
-    "I am going to define 3 different types/profiles of centre backs according to my understanding of the game and compute a weighted average to find the perfect CB. Each type will be made up of some weights applied to statistical categories (e.g. aerial dominance, one v one defending, ...). Each category is going to be made up of different statistics. Each statistic is going to be assigned a weight/importance that is going to determine its impact on that category. (I am basing this work on my own interpretation of Edd Webster's Role Scouting System)\n",
+    "I am going to define 3 different types/profiles of centre backs according to my understanding of the game and compute a weighted average to find the perfect CB. Each type will be made up of some weights applied to statistical categories (e.g. aerial dominance, one v one defending, ...). Each category is going to be made up of different statistics. Each statistic is going to be assigned a weight/importance that is going to determine its impact on that category. (I am basing this work on my own interpretation of Andy Watson's Role Scouting System)\n",
     "\n",
     "Summing up: Chosen CB -> 3 profiles -> 12 categories -> 64 features"
    ]
